--- a/index.html
+++ b/index.html
@@ -39,13 +39,15 @@
           <div class="list-item">
             <div class="list-item-heading">Putting Sybils on a Diet: Securing Distributed Hash Tables using Proofs of Space</div>
             <div class="list-item-body">Christoph U. Günther, Krzysztof Pietrzak<br>
-              <em>In submission</em>
+              <em>In submission</em><br>
+              <a href="/uploads/posp_dht_draft.pdf">Full version</a>
             </div>
           </div>
           <div class="list-item">
             <div class="list-item-heading">Nakamoto Consensus from Multiple Resources</div>
             <div class="list-item-body">Mirza Ahad Baig, Christoph U. Günther, Krzysztof Pietrzak<br>
-              <em>In submission</em>
+              <em>In submission</em><br>
+              <a href="/uploads/nakamoto_draft.pdf">Full version</a>
             </div>
           </div>
           <div class="list-item">
@@ -60,7 +62,7 @@
               <a href="https://doi.org/10.56553/popets-2024-0134">Full version</a> · 
               <a href="https://doi.org/10.56553/popets-2024-0134">DOI</a> · 
               <a href="https://youtu.be/f-rjlRB4NN0?t=8535">Talk</a> · 
-              <a href="/slides/2024_pets_act_deny.pdf">Slides</a>
+              <a href="/uploads/2024_pets_act_deny.pdf">Slides</a>
             </div>
           </div>
           <div class="list-item">
@@ -69,7 +71,7 @@
               <a href="https://eprint.iacr.org/2024/312">Full version</a> · 
               <a href="https://doi.org/10.1007/978-3-031-58734-4_11">DOI</a> · 
               <a href="https://youtu.be/syvcarTFB10">Talk</a> · 
-              <a href="/slides/2024_ec_tmhf.pdf">Slides</a>
+              <a href="/uploads/2024_ec_tmhf.pdf">Slides</a>
             </div>
           </div>
           <div class="list-item">
@@ -88,7 +90,7 @@
     </div>
     <hr id="footer-rule">
     <footer>
-      <div class="footnote">Updated on 05. Nov 2024</div>
+      <div class="footnote">Updated on 06. Nov 2024</div>
       <div class="footnote">
         <a href="legal.html">Contact &amp; Privacy</a>
       </div>
